--- a/src/views/home/home.module.less
+++ b/src/views/home/home.module.less
@@ -30,10 +30,11 @@
       transition: all 0.2s;
     }
     .collapseButton {
-      flex: 1;
+
     }
     .user {
-
+      flex: 1;
+      text-align: right;
     }
 
   }
