--- a/src/views/home/home.module.less
+++ b/src/views/home/home.module.less
@@ -1,10 +1,3 @@
-//z-index 区域划分
-// 0-10 背景
-// 10-100 页面层级
-// 100-500 弹框
-
-
-
 
 @headerHeight: 70px;
 
@@ -33,9 +26,12 @@
       cursor: pointer;
     }
     .user {
-      flex: 1;
+      padding-left: 20px;
       text-align: right;
-      padding-right: 10px;
+      padding-right: 16px;
+    }
+    .balance {
+
     }
     .userName {
       color: #333333;
