--- a/src/views/home/home.module.less
+++ b/src/views/home/home.module.less
@@ -1,4 +1,3 @@
-
 @headerHeight: 70px;
 
 .homeWrap {
@@ -18,26 +17,40 @@
     display: flex;
     align-items: center;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
+
     .logo {
       height: 100%;
       transition: all 0.2s;
     }
+
     .collapseButton {
       cursor: pointer;
     }
+
     .user {
       padding-left: 20px;
       text-align: right;
       padding-right: 16px;
     }
+
+    .language {
+      text-align: right;
+      box-sizing: border-box;
+      width: 85px;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+
     .balance {
 
     }
+
     .userName {
       color: #333333;
     }
 
   }
+
   .homeAside {
     box-sizing: border-box;
     padding-top: @headerHeight;
@@ -45,6 +58,7 @@
     height: 100vh;
     transition: all 0.5s;
   }
+
   .homeMain {
     box-sizing: border-box;
     padding-top: @headerHeight;
@@ -53,6 +67,7 @@
     height: 100vh;
     overflow: auto;
   }
+
   .homeMainContent {
     border: 1px solid blue;
     margin: 10px;
